@@ -25,9 +25,6 @@ package org.openjdk.bench.javax.crypto.full;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.Param;
 import org.openjdk.jmh.annotations.Setup;
-import org.openjdk.jmh.infra.Blackhole;
-import java.security.GeneralSecurityException;
-import org.openjdk.jmh.annotations.Fork;
 
 import javax.crypto.BadPaddingException;
 import javax.crypto.Cipher;
@@ -39,10 +36,9 @@ import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
 import java.security.spec.InvalidParameterSpecException;
 
-@Fork(jvmArgs = {"-Xms20g", "-Xmx20g", "-XX:+UseZGC"})
 public class AESBench extends CryptoBase {
 
-    public static final int SET_SIZE = 8;
+    public static final int SET_SIZE = 128;
 
     @Param({"AES/ECB/NoPadding", "AES/ECB/PKCS5Padding", "AES/CBC/NoPadding", "AES/CBC/PKCS5Padding"})
     private String algorithm;
@@ -55,9 +51,8 @@ public class AESBench extends CryptoBase {
 
     byte[][] data;
     byte[][] encryptedData;
-    private Cipher encryptCipher;
-    private Cipher decryptCipher;
-    private byte[] outBuffer;
+    Cipher encryptCipher;
+    Cipher decryptCipher;
     int index = 0;
 
     @Setup
@@ -71,7 +66,6 @@ public class AESBench extends CryptoBase {
         decryptCipher.init(Cipher.DECRYPT_MODE, ks, encryptCipher.getParameters());
         data = fillRandom(new byte[SET_SIZE][dataSize]);
         encryptedData = fillEncrypted(data, encryptCipher);
-        outBuffer = new byte[dataSize + 128]; // extra space for tag, etc
     }
 
     @Benchmark
@@ -82,24 +76,9 @@ public class AESBench extends CryptoBase {
     }
 
     @Benchmark
-    public void encrypt2(Blackhole bh) throws GeneralSecurityException {
-        byte[] d = data[index];
-        index = (index +1) % SET_SIZE;
-        bh.consume(encryptCipher.doFinal(d, 0, d.length, outBuffer));
-    }
-
-    @Benchmark
     public byte[] decrypt() throws BadPaddingException, IllegalBlockSizeException {
         byte[] e = encryptedData[index];
         index = (index +1) % SET_SIZE;
         return decryptCipher.doFinal(e);
     }
-
-    @Benchmark
-    public void decrypt2(Blackhole bh) throws GeneralSecurityException {
-        byte[] e = encryptedData[index];
-        index = (index +1) % SET_SIZE;
-        bh.consume(decryptCipher.doFinal(e, 0, e.length, outBuffer));
-    }
-
 }
